# tftp

./: .stylish-haskell.yaml  LICENSE  Makefile  README.md  Setup.hs  tftp.cabal
src/: Main.hs  TFTPUpload.hs
src/Network/TFTP/: Message.hs  Protocol.hs  Server.hs  Types.hs  UDPIO.hs  XFer.hs
tests/: MessageDecoding.hs  Protocol.hs  TFTPEcho.hs  UDPIO.hs  XFer.hs
