name:              tftp
version:           0.1
category:          network
synopsis:          A library for building tftp servers
description:       A library for building tftp servers
build-type:        Simple
cabal-version:     >= 1.9.2
copyright:         (c) 2012 Sven Heyll
author:            Sven Heyll
maintainer:        sven.heyll@gmail.com
homepage:          http://github.com/sheyll/tftp


extra-source-files: src/*.hs Makefile

--source-repository head
--   type:     git
--   location: git@github.com/sheyll/tftp.git

library
   exposed-modules: Network.TFTP.Server, Network.TFTP.Message
   hs-source-dirs: src
   build-depends:
      base >= 4 && <= 5,
      base-unicode-symbols,
      containers,
      binary >= 0.6.2.0,
      bytestring,
      mtl,
      transformers,
      network
   ghc-options: -threaded
   cpp-options: -DDEBUG
   extensions: UnicodeSyntax, CPP, DoAndIfThenElse, ScopedTypeVariables, FlexibleInstances

Test-Suite message-decoding
    type:           exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:        MessageDecoding.hs
    build-depends:  base, tftp

Test-Suite tftp-echo
    type:           exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:        TFTPEcho.hs
    build-depends:  base, tftp
