name:              tftp
version:           0.1
category:          network
synopsis:          A library for building tftp servers
description:       A library for building tftp servers
build-type:        Simple
cabal-version:     >= 1.9.2
copyright:         (c) 2012 Sven Heyll
author:            Sven Heyll
maintainer:        sven.heyll@gmail.com
homepage:          http://github.com/sheyll/tftp


extra-source-files: src/*.hs Makefile README.md

--source-repository head
--   type:     git
--   location: git@github.com/sheyll/tftp.git

library
   exposed-modules: Network.TFTP.Message
                  , Network.TFTP.UDPIO
                  , Network.TFTP.Protocol
                  , Network.TFTP.Types
   hs-source-dirs: src
   build-depends:
      base >= 4 && <= 5,
      containers,
      binary >= 0.6.2.0,
      bytestring,
      mtl,
      transformers,
      hslogger,
      network >= 2.3 && < 2.4
   ghc-options: -threaded
   cpp-options: -DDEBUG
   extensions: CPP
              , DoAndIfThenElse
              , ScopedTypeVariables
              , FlexibleInstances
              , FlexibleContexts
              , MultiParamTypeClasses
              , FunctionalDependencies
              , GeneralizedNewtypeDeriving

Test-Suite message-decoding
    type:           exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:        MessageDecoding.hs
    build-depends:  base, tftp, QuickCheck
    extensions: CPP
                , DoAndIfThenElse
                , ScopedTypeVariables
                , FlexibleInstances
                , FlexibleContexts
                , MultiParamTypeClasses
                , FunctionalDependencies
                , GeneralizedNewtypeDeriving

Test-Suite protocol
    type:           exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:        Protocol.hs
    build-depends:  base, tftp, hslogger, mtl, transformers
    extensions: CPP
                , DoAndIfThenElse
                , ScopedTypeVariables
                , FlexibleInstances
                , FlexibleContexts
                , MultiParamTypeClasses
                , FunctionalDependencies
                , GeneralizedNewtypeDeriving

Test-Suite udp-io
    type:           exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:        UDPIO.hs
    build-depends:  base, tftp, hslogger
    ghc-options: -threaded
    extensions: CPP
                , DoAndIfThenElse
                , ScopedTypeVariables
                , FlexibleInstances
                , FlexibleContexts
                , MultiParamTypeClasses
                , FunctionalDependencies
                , GeneralizedNewtypeDeriving
